tests/errors/sem.invalid-arg.fficall-libpath.or
main :: () -> void {
    @fficall "asdasd.a", "decl", void, "something";
};
